--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1 align="center">Velammal Fashions</h1>
     </div>
 
-    <link rel="stylesheet" href="Styles/MainStyles.css" />
+    <link rel="stylesheet" href="MainStyles.css" />
   </head>
   <body>
     <table>
@@ -18,13 +18,13 @@
           <div class="ImageWrapper">
             <img
               class="MainImage"
-              src="Images/Shirts.jpg"
+              src="Shirts.jpg"
               usemap="#image-map"
             />
 
             <map name="image-map">
               <div class="ImageWrap-Black">
-                <img class="ImageShown-Black" src="Images/black_shirt.jpg" />
+                <img class="ImageShown-Black" src="black_shirt.jpg" />
                 <area
                   class="blackArea"
                   coords="89,4,78,12,71,22,55,32,32,42,18,55,10,87,10,109,5,136,6,160,2,183,4,206,1,232,19,229,28,227,31,195,41,159,43,117,43,102,48,119,51,151,49,189,47,217,46,252,65,257,83,260,113,263,130,261,142,257,156,250,161,232,155,198,154,158,156,124,161,103,163,94,161,124,161,142,163,158,166,177,172,201,177,231,198,225,195,146,187,54,162,36,132,19,124,4,106,1,97,0"
@@ -32,7 +32,7 @@
                 />
               </div>
               <div class="ImageWrap-Blue">
-                <img class="ImageShown-Blue" src="Images/blue_shirt.jpg" />
+                <img class="ImageShown-Blue" src="blue_shirt.jpg" />
                 <area
                   class="blueArea"
                   coords="155,31,186,54,189,67,194,88,194,105,196,122,197,146,198,164,200,173,200,186,199,207,199,227,176,232,168,186,161,155,159,128,157,133,157,163,156,190,159,219,162,236,158,253,164,259,175,261,196,261,221,262,239,257,255,248,257,231,252,195,251,167,251,139,253,124,255,107,258,95,260,113,258,124,260,135,259,149,262,169,262,181,268,202,269,221,273,234,296,227,294,204,292,169,292,147,292,132,289,100,287,72,278,45,236,29,223,8,204,2,182,5,173,21"
