--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShirtsWorld</title>
     <div class="TitleWrap">
-      <h1 align="center">Velammal Fashions</h1>
+      <h1 align="center">India Fashions</h1>
     </div>
 
     <link rel="stylesheet" href="MainStyles.css" />
